Delete max-height declarations for html and body elements as neither min nor max height fixed Home pg scrolling on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,16 +7,10 @@
     text-decoration: none; 
 }
 
-html {
-    max-height: -webkit-fill-available; 
-}
-
 body {
     background-color: #fff5ed; 
     color: #025; 
     font-family: Roboto, sans-serif; 
-    max-height: 100vh; 
-    max-height: -webkit-fill-available; 
 }
 
 /* header */
